--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,65 @@
  <footer id="footer" class="footer">
     <div class="footer-top">
-        <div class="container container-lg">
+        <div class="container">
             <div class="row cols-xs-space cols-sm-space cols-md-space">
-                <div class="col-lg-3">
+                <div class="col-lg-5">
                     <div class="col">
-                        <h4 class="heading heading-xs strong-600 text-uppercase mb-3">
-                            Quick links
+                        <img src="PATH_TO_IMAGE">
+                        <span class="clearfix"></span>
+                        <span class="heading heading-sm c-gray-light strong-400">One template. Infinite solutions.</span>
+                        <p class="mt-3">
+                            All the components included in Everpay are built to the same level of quality as Bootstrap and highlighted with several example pages.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-2">
+                    <div class="col">
+                       <h4 class="heading heading-xs strong-600 text-uppercase mb-1">
+                           Solutions
+                       </h4>
+
+                       <ul class="footer-links">
+                            <li><a href="#" title="Industries">Industries</a></li>
+                            <li><a href="#" title="Discussions">Discussions</a></li>
+                            <li><a href="#" title="Contact support">Contact</a></li>
+                            <li><a href="#" title="Blog">Blog</a></li>
+                            <li><a href="#" title="Jobs">FAQ</a></li>
+                        </ul>
+                     </div>
+                </div>
+
+                <div class="col-lg-2">
+                    <div class="col">
+                        <h4 class="heading heading-xs strong-600 text-uppercase mb-1">
+                            Company
                         </h4>
 
                         <ul class="footer-links">
                              <li>
-                                 <a href="homepage-video.html#">Home</a>
+                                 <a href="#" title="Home">
+                                     Home
+                                 </a>
                              </li>
                              <li>
-                                 <a href="homepage-video.html#">About us</a>
+                                 <a href="#" title="About us">
+                                     About us
+                                 </a>
                              </li>
                              <li>
-                                 <a href="homepage-video.html#">Services</a>
+                                 <a href="#" title="Services">
+                                     Services
+                                 </a>
                              </li>
                              <li>
-                                 <a href="homepage-video.html#">Blog</a>
+                                 <a href="#" title="Blog">
+                                     Blog
+                                 </a>
                              </li>
                              <li>
-                                 <a href="homepage-video.html#">Contact</a>
+                                 <a href="#" title="Contact">
+                                     Contact
+                                 </a>
                              </li>
                          </ul>
                     </div>
@@ -30,59 +67,56 @@
 
                 <div class="col-lg-3">
                     <div class="col">
-                       <h4 class="heading heading-xs strong-600 text-uppercase mb-3">
-                           Support
-                       </h4>
-
-                       <ul class="footer-links">
-                            <li><a href="homepage-video.html#">Help center</a></li>
-                            <li><a href="homepage-video.html#">Discussions</a></li>
-                            <li><a href="homepage-video.html#">Contact</a></li>
-                            <li><a href="homepage-video.html#">Blog</a></li>
-                            <li><a href="homepage-video.html#">FAQ</a></li>
-                        </ul>
-                     </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <div class="col">
-                       <h4 class="heading heading-xs strong-600 text-uppercase mb-3">
-                           Archives
-                       </h4>
-
-                       <ul class="footer-links">
-                            <li><a href="homepage-video.html#" title="Help center">May 2018</a></li>
-                            <li><a href="homepage-video.html#" title="Discussions">June 2018</a></li>
-                            <li><a href="homepage-video.html#" title="Contact support">July 2018</a></li>
-                            <li><a href="homepage-video.html#" title="Blog">August 2018</a></li>
-                            <li><a href="homepage-video.html#" title="Jobs">September 2018</a></li>
-                            <li><a href="homepage-video.html#" title="Jobs">October 2018</a></li>
-                            <li><a href="homepage-video.html#" title="Jobs">November 2018</a></li>
-                        </ul>
-                     </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <div class="col">
-                        <h4 class="heading heading-xs strong-600 text-uppercase mb-3">
-                            About {{ site.title }}
+                        <h4 class="heading heading-xs strong-600 text-uppercase mb-1">
+                            Get in touch
                         </h4>
-                        <p>
-                            150 Southeast Pidgeon Meadow
-                            <br>
-                            Claflin Terrace, 305458
-                        </p>
-                        <p class="lead mt-4 mb-4">
-                            E: <a href="homepage-video.html#">support@everpay.io</a>
-                            <br>
-                            T: 0755.222.333
-                        </p>
+
+                        <ul class="social-media social-media--style-1-v4">
+                            <li>
+                                <a href="#" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="instagram" target="_blank" data-toggle="tooltip" data-original-title="Instagram">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Dribbble">
+                                    <i class="fa fa-dribbble"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Github">
+                                    <i class="fa fa-github"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <div class="container container-sm">
+             <div class="row">
+                <div class="col">
+                    <div class="copyright text-center">
+                        Copyright © 2019;
+                        <a href="#" target="_blank">
+                            <strong>Everpay Corporation</strong>
+                        </a> -
+                        All rights reserved
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </footer>
+
+
                 </div>
             </div>
         </div><!-- END: st-pusher -->
