--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,9 +15,9 @@
 
                 <div class="col-lg-2">
                     <div class="col">
-                       <h4 class="heading heading-xs strong-600 text-uppercase mb-1">
+                       <h2 class="heading heading-xs mb-1">
                            Solutions
-                       </h4>
+                       </h2>
 
                        <ul class="footer-links">
                             <li><a href="#" title="Industries">Industries</a></li>
@@ -31,9 +31,9 @@
 
                 <div class="col-lg-2">
                     <div class="col">
-                        <h4 class="heading heading-xs strong-600 text-uppercase mb-1">
+                        <h2 class="heading heading-xs mb-1">
                             Company
-                        </h4>
+                        </h2>
 
                         <ul class="footer-links">
                              <li>
@@ -67,9 +67,9 @@
 
                 <div class="col-lg-3">
                     <div class="col">
-                        <h4 class="heading heading-xs strong-600 text-uppercase mb-1">
+                        <h2 class="heading heading-xs mb-1">
                             Get in touch
-                        </h4>
+                        </h2>
 
                         <ul class="social-media social-media--style-1-v4">
                             <li>
@@ -102,32 +102,34 @@
     <div class="footer-bottom">
         <div class="container container-lg">
         
-             <div class="row">
-                <div class="col">
-<div class="footer--copyright">                  
-     <div class="copyright text-left">
+<div class="row">
+<ul class="col col-lg-4">               
+     <li class="copyright text-left">
                         Copyright © 2019 
                         <a href="#" target="_blank">
                             <strong>Everpay</strong>
                         </a> -
                         All rights reserved
-                    </div>
-     <div class="pl-1 text-left">
+      </li>
+ </ul>
+ <ul class="col col-lg-8 copy-links">     
+     <li class="pl-1 text-left">
         <a href="/resources/sitemap">Sitemap</a>
-    </div>     
-<div class="pl-1 text-left">
+    </li>     
+<li class="pl-1 text-left">
         <a href="https://status.everpayinc.com/preferences.html">Status</a>
-    </div> 
-<div class="pl-1 text-left">
+    </li> 
+<li class="pl-1 text-left">
         <a href="/legal/termsofservice">Terms of Use</a>
-</div>
-<div class="pl-1 text-left">
+</li>
+<li class="pl-1 text-left">
         <a href="/legal/privacypolicy">Privacy Policy</a>
     </div>
-<div class="pl-1 text-left">
+<li class="pl-1 text-left">
         <a href="/legal/cookie-notification">Cookie Notification</a>
-    </div>
-                </div>
+    </li>  
+</ul>                
+</div>
             </div>
         </div>
     </div>
